--- a/style/style.css
+++ b/style/style.css
@@ -4,10 +4,38 @@ body {
   color: white;
 }
 
+/* Reusable CSS */
+.margin-right {
+  margin-right: 10px
+}
+
+.margin-left {
+  margin-left: 10px
+}
+
+.text-center {
+  text-align: center;
+}
+
+/* Selectors */
+
 .main-cont {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.about-cont {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 20px
+}
+
+.skill-cont {
+  display: flex;
+  justify-content:center;
+  margin-top: 40px;
 }
 
 .my-name {
@@ -18,6 +46,10 @@ body {
   border-radius: 80%
 }
 
+.about-pic {
+  border-radius: 50%;
+}
+
 .flex {
   display: flex
 }
@@ -26,6 +58,16 @@ body {
   text-align: center
 }
 
-.margin-right {
-  margin-right: 10px
+td {
+  padding: 10px 10px 10px 10px;
+}
+
+@media all and (max-width: 640px) {
+  .about-cont {
+    flex-direction: column;
+    align-items: center
+  }
+  .about-pic {
+    max-width: 40%
+  }
 }
