--- a/style/style.css
+++ b/style/style.css
@@ -42,7 +42,6 @@ html, body {
 .port-cont {
   display: flex;
   flex-direction: row;
-  justify-content: center;
   margin-top: 20px;
   padding: 0 50px 0 50px;
 }
@@ -60,16 +59,13 @@ html, body {
 }
 
 .flex {
-  display: flex
-}
-
-.button-group {
-  text-align: center
+  display: flex;
 }
 
 td {
   padding: 10px 10px 10px 10px;
 }
+
 
 @media all and (max-width: 640px) {
   .about-cont {
