--- a/style/style.css
+++ b/style/style.css
@@ -10,6 +10,10 @@ html, body {
   margin-right: 10px
 }
 
+.padding-left {
+  padding-left: 10px
+}
+
 .margin-left {
   margin-left: 10px
 }
@@ -102,5 +106,8 @@ td {
     display: flex;
     flex-direction: column;
     margin-top: 40px;
+  }
+  .collapse-column {
+    display: none
   }
 }
